# ai-genai-model-optimization

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: application-dev.yaml  application-prod.yaml  application.yaml
src/model_optimization/: __init__.py  main.py
src/model_optimization/api/: __init__.py  router.py
src/model_optimization/benchmarks/: __init__.py  runner.py
src/model_optimization/config/: __init__.py  settings.py
src/model_optimization/distillation/: __init__.py  distiller.py
src/model_optimization/quantization/: __init__.py  awq_quantizer.py  gguf_converter.py  gptq_quantizer.py
src/model_optimization/serving/: __init__.py  vllm_server.py
src/model_optimization/utils/: __init__.py  logger.py
tests/: __init__.py  test_benchmarks.py
