[tool.poetry]
name = "ai-genai-model-optimization"
version = "1.0.0"
description = "LLM optimization framework with quantization, speculative decoding, model distillation, and production serving"
authors = ["Saurabh Herwadkar"]
readme = "README.md"
license = "MIT"
packages = [{include = "model_optimization", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
torch = "^2.6.0"
transformers = "^4.48.0"
accelerate = "^1.3.0"
bitsandbytes = "^0.45.0"
auto-gptq = "^0.7.1"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
pyyaml = "^6.0.2"
structlog = "^25.1.0"
python-dotenv = "^1.0.1"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/model_optimization --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "PT"]
ignore = ["S101", "COM812"]

[tool.ruff.lint.isort]
known-first-party = ["model_optimization"]
